[package]
name = "pestilence"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8.3"
cbc = "0.1.2"
ntapi = "0.4.0"
obfstr = "0.4.3"
socket2 = "0.5.5"

[dependencies.windows]
version = "0.23.0"
features = [
    "Win32_System_Memory",
    "Win32_System_Services",
    "Win32_System_SystemServices",
    "Win32_Foundation",
]
